<resources>
    <string name="app_name">GodzillaFinance</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="signup">SignUp</string>
    <string name="logout">Logout</string>
    <string name="crypto">crypto</string>
    <string name="explore">Explore</string>
    <string name="crypto_tracker">Crypto Tracker</string>
    <string name="search">Search</string>
    <string name="symbol">Symbol</string>
    <string name="name">Name</string>
    <string name="rate">Rate</string>
    <string name="googlepay_button_content_description">GooglePay</string>
    <string name="finance">Finance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>