<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/black_shade2">

    <RelativeLayout
        android:id="@+id/RelativeLayoutCurrency_rv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Symbol_rv_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="3dp"
            android:layout_toLeftOf="@id/Rate_rv_item"
            android:text="@string/symbol"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/CurrencyName_rv_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Symbol_rv_item"
            android:layout_margin="2dp"
            android:padding="3dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Rate_rv_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="2dp"
            android:padding="3dp"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </RelativeLayout>



</androidx.cardview.widget.CardView>